--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <body>
     <!-- Top Bar -->
     <div class="top-bar">
-        ChatGPT
+        ChatGPT By Alif Picchi
     </div>
 
     <!-- Chat Area -->
