--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>ChatGPT → By Alif Picchi</title>
+    <title>AP Chat Bot</title>
     <style>
         body {
             margin: 0;
@@ -218,7 +218,7 @@
 <body>
     <!-- Top Bar -->
     <div class="top-bar">
-        ChatGPT → By Alif Picchi
+        AP Chat Bot
     </div>
 
     <!-- Chat Area -->
@@ -239,7 +239,7 @@
         const chatForm = document.getElementById("chat-form");
         const userInput = document.getElementById("user-input");
 
-        const chatGPTLogo = "https://i.ibb.co/JxcxBzh/67373267.jpg";
+        const chatGPTLogo = "https://ibb.co.com/Jd5Fk1r.jpg";
         const userLogo = "https://i.ibb.co/ssQNvBC/67373290.jpg";
 
         // Function to parse markdown
