--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         const chatForm = document.getElementById("chat-form");
         const userInput = document.getElementById("user-input");
 
-        const chatGPTLogo = "https://i.ibb.co/9rT4zwz/67373290.jpg";
+        const chatGPTLogo = "https://i.ibb.co/ZzZsb0L/67373290.jpg";
         const userLogo = "https://i.ibb.co/ssQNvBC/67373290.jpg";
 
         // Function to parse markdown
